# r-RLZSA

./: README.md
code/: CMakeLists.txt  CURRENT_ALGORITHM_DESCRIPTION.md  INNOVATION2_EXPERIMENTS.md  PUBLICATION_GUIDE.md  README.md
code/cli/move-r/: move-r-build.cpp  move-r-dump-fields.cpp  move-r-locate.cpp  move-r-partial-codec.cpp
code/dataset-calculate/: dataset-cal.py
code/include/lzendsa/: lzendsa_encoding.hpp
code/include/move_r/: move_r.hpp  queries.cpp
code/include/move_r/construction/: common.cpp  construction.hpp  libsais.cpp
code/measurements/: compare_einstein_move_r.py  dump_vrrlzsa_field_frequency.py  experiment_innovation1_hybrid.py  experiment_innovation2_adaptive.py  measure-text.sh  run_innovation2_varint_einstein_100mb.py  run_innovation2_varint_v2_cross_dataset.py  run_r_rlzsa_100mb.py  run_selected_m4_128.py  run_vrrlzsa_ablation.py
result/: README.md
result/Vr-RLZSA/field_frequency_top100/: all_field_summary.csv  field_frequency_summary.md
result/Vr-RLZSA/field_frequency_top100/DNA/: cpl_rank_frequency.csv  field_summary.csv  sr_rank_frequency.csv
result/Vr-RLZSA/field_frequency_top100/SARS-Cov-2_40/: cpl_rank_frequency.csv  field_summary.csv  p_rank_frequency.csv
result/Vr-RLZSA/field_frequency_top100/boost/: cpl_rank_frequency.csv  field_summary.csv  p_rank_frequency.csv
result/Vr-RLZSA/field_frequency_top100/candida_auris/: cpl_rank_frequency.csv  field_summary.csv  sr_rank_frequency.csv
result/Vr-RLZSA/field_frequency_top100/einstein.en.txt/: field_summary.csv  l_rank_frequency.csv  sr_rank_frequency.csv
result/Vr-RLZSA/field_frequency_top100/english_200MB/: field_summary.csv  l_rank_frequency.csv  p_rank_frequency.csv
result/Vr-RLZSA/field_frequency_top100/world_leaders/: field_summary.csv  l_rank_frequency.csv  sr_rank_frequency.csv
result/Vr-RLZSA/varint_v2_cross_dataset/: all_build_summary.csv  all_query_summary.csv  all_raw_vs_varint_v2_space_saving.csv  all_space_breakdown.csv  final_cross_dataset_summary.md
result/Vr-RLZSA/vrrlzsa_ablation/: ablation_component_space.csv  ablation_query_summary.csv  ablation_space_summary.csv  ablation_summary.md
result/r-RLZSA/: README.md  all_7_datasets_statistics.md  combined_build_summary.csv  combined_final_test_performance.csv  combined_validation_theta_scan.csv  combined_workload_occ_stats.csv
result/r-RLZSA/DNA/: build_summary_selected.csv  final_test_performance.csv  final_test_summary.md  selected_theta.txt  validation_theta_scan.csv  workload_occ_stats.csv
result/r-RLZSA/SARS-Cov-2_40/: build_summary_selected.csv  final_test_performance.csv  final_test_summary.md  selected_theta.txt  validation_theta_scan.csv  workload_occ_stats.csv
result/r-RLZSA/boost/: build_summary_selected.csv  final_test_performance.csv  final_test_summary.md  selected_theta.txt  validation_theta_scan.csv  workload_occ_stats.csv
result/r-RLZSA/candida_auris/: build_summary_selected.csv  final_test_performance.csv  final_test_summary.md  selected_theta.txt  validation_theta_scan.csv  workload_occ_stats.csv
result/r-RLZSA/einstein/: build_summary_selected.csv  final_test_performance.csv  final_test_summary.md  selected_theta.txt  validation_theta_scan.csv  workload_occ_stats.csv
result/r-RLZSA/english_200MB/: build_summary_selected.csv  final_test_performance.csv  final_test_summary.md  selected_theta.txt  validation_theta_scan.csv  workload_occ_stats.csv
result/r-RLZSA/world_leaders/: build_summary_selected.csv  final_test_performance.csv  final_test_summary.md  selected_theta.txt  validation_theta_scan.csv  workload_occ_stats.csv
